<resources>
    <string name="app_name">Kucing &amp; Kuda Pedia</string>
    <string name="ben"><![CDATA[Kucing & Kuda & Buaya]]></string>
    <string name="klik">(Klick Profile untuk melihat biodata pembuat)</string>
    <string name="pilih">(Pilih gambar untuk membuka galeri)</string>
    <string name="anjing">Ras Anjing</string>
    <string name="jenis">Jenis Hewan</string>
    <string name="asal">Asal</string>
    <string name="oke">Deskripsi hewan</string>
    <string name="bioo">Biodata Pembuat</string>
    <string name="name">Nama : Tedy Saputra</string>
    <string name="clas">Kelas : TI C</string>
    <string name="npm">NIM : 200602095</string>
    <string name="prodi">Prodi : Tekhnik Informatika</string>
    <string name="hobi">Hobby : Maen Futsa</string>
    <string name="ole">Daftar Ras Hewan</string>
    <string name="kintamani">Kintamani</string>
    <string name="bali">Bali</string>
    <string name="proo">Profile</string>
    <string name="pe">Angora</string>
    <string name="odo">Turki</string>
    <string name="odol">Aslinya berasal dari Ankara, Turki dengan ciri khas berbulu panjang dan lembut</string>
    <string name="ted">Bengal</string>
    <string name="lol">Inggris</string>
    <string name="lul">Merupakan hasil persilangan antara Kucing Leopard Asia dengan kucing domestik Inggris</string>
    <string name="gg">Birmani</string>
    <string name="gege">Birma/Myanmar</string>
    <string name="gaga">Konon awalnya merupakan ras kucing yand biasa menemani para biksu yang menetap pada kuil di Birma</string>
    <string name="gigi">Persia</string>
    <string name="asa">Iran</string>
    <string name="asus">Kucing berbulu panjang dengan wajah bundar dan hidung pesek. Awalnya berasal dari Iran kemudian diimpor ke Italia</string>
    <string name="lael">Siam</string>
    <string name="gaes">Thailand</string>
    <string name="bim">Kucing hasil turunan dari Wichian Maat (Kucing Thailand) dengan ciri khas berbadan panjang dan langsing, wajah lonjong, telinga lebar, dan mata kebiruan</string>
    <string name="alay">Siberia</string>
    <string name="aza">Rusia</string>
    <string name="azu">\"Kucing domestik Rusia dengan bulu lebat dan badan besar tapi sangat lincah dan terkenal dengan kemampuan melompatnya \"</string>
    <string name="elooo">Shire</string>
    <string name="ambo">Britain</string>
    <string name="uyu">Kuda ini dikenal sebagai kuda penarik</string>
    <string name="luoo">Iceland</string>
    <string name="yihi">\"Amerika Utara \"</string>
    <string name="unaa">The Kuda Iceland adalah baka kuda yang dikembangkan di Iceland. Walaupun kuda kecil, kadang-kadang berukuran kuda, kebanyakan pendaftar untuk Iceland menyebutnya sebagai kuda</string>
    <string name="jack">Friesian</string>
    <string name="jeep">Belanda</string>
    <string name="mans">\"Kuda ini berasal dari friesland di dalam belanda \"</string>
    <string name="pre">Buaya Nil</string>
    <string name="nas">Afrika</string>
    <string name="acin">Buaya nil termasuk jenis buaya yang paling berbahaya di dunia. Ia dapat ditemukan di danau, perairan air tawar atau air payau. Ukuran tubuh buaya nil juga terbilang besar, bisa mencapai 5-6 meter</string>
    <string name="udin">Buaya air asin</string>
    <string name="upin">Buaya dengan nama latin Crocodylus porosus ini tak hanya ganas memangsa tapi juga menjadi salah satu hewan reptil terbesar di dunia. Panjang buaya air asin bisa mencapai 6,5 - 7 meter dengan berat hingga 1.000 kg lebih</string>
    <string name="bung">Buaya Alligator Amerika</string>
    <string name="yess">Amerika Serikat</string>
    <string name="gan">Meski terbilang berbahaya, kebanyakan alligator tumbuh dengan ukuran yang lebih kecil dari buaya pada umumnya, yakni sekitar 4-4,5 meter</string>
</resources>